// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticationPageComponent matches snapshot when social logins are not shown 1`] = `
<Page
  schema={
    Object {
      "@context": "http://schema.org",
      "@type": "WebPage",
      "name": "AuthenticationPage.schemaTitleLogin",
    }
  }
  scrollingDisabled={false}
  title="AuthenticationPage.schemaTitleLogin"
>
  <LayoutSingleColumn
    className={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        className=""
      />
    </LayoutWrapperTopbar>
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <div>
          <LinkTabNavHorizontal
            className={null}
            rootClassName={null}
            skin="light"
            tabClassName={null}
            tabRootClassName={null}
            tabs={
              Array [
                Object {
                  "linkProps": Object {
                    "name": "SignupPage",
                    "to": Object {
                      "state": Object {
                        "from": "/protected",
                      },
                    },
                  },
                  "selected": false,
                  "text": <h1>
                    <FormattedMessage
                      id="AuthenticationPage.signupLinkText"
                      values={Object {}}
                    />
                  </h1>,
                },
                Object {
                  "linkProps": Object {
                    "name": "LoginPage",
                    "to": Object {
                      "state": Object {
                        "from": "/protected",
                      },
                    },
                  },
                  "selected": true,
                  "text": <h1>
                    <FormattedMessage
                      id="AuthenticationPage.loginLinkText"
                      values={Object {}}
                    />
                  </h1>,
                },
              ]
            }
          />
          <LoginForm
            inProgress={false}
            onSubmit={[Function]}
          />
        </div>
      </div>
      <injectIntl(ModalComponent)
        id="AuthenticationPage.tos"
        isOpen={false}
        onClose={[Function]}
        onManageDisableScrolling={[Function]}
        usePortal={true}
      >
        <div>
          <h2>
            <FormattedMessage
              id="AuthenticationPage.termsHeading"
              values={Object {}}
            />
          </h2>
          <TermsOfService
            className={null}
            rootClassName={null}
          />
        </div>
      </injectIntl(ModalComponent)>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSingleColumn>
</Page>
`;

exports[`AuthenticationPageComponent matches snapshot when social logins are shown 1`] = `
<Page
  schema={
    Object {
      "@context": "http://schema.org",
      "@type": "WebPage",
      "name": "AuthenticationPage.schemaTitleLogin",
    }
  }
  scrollingDisabled={false}
  title="AuthenticationPage.schemaTitleLogin"
>
  <LayoutSingleColumn
    className={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        className=""
      />
    </LayoutWrapperTopbar>
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <div>
          <LinkTabNavHorizontal
            className={null}
            rootClassName={null}
            skin="light"
            tabClassName={null}
            tabRootClassName={null}
            tabs={
              Array [
                Object {
                  "linkProps": Object {
                    "name": "SignupPage",
                    "to": Object {
                      "state": Object {
                        "from": "/protected",
                      },
                    },
                  },
                  "selected": false,
                  "text": <h1>
                    <FormattedMessage
                      id="AuthenticationPage.signupLinkText"
                      values={Object {}}
                    />
                  </h1>,
                },
                Object {
                  "linkProps": Object {
                    "name": "LoginPage",
                    "to": Object {
                      "state": Object {
                        "from": "/protected",
                      },
                    },
                  },
                  "selected": true,
                  "text": <h1>
                    <FormattedMessage
                      id="AuthenticationPage.loginLinkText"
                      values={Object {}}
                    />
                  </h1>,
                },
              ]
            }
          />
          <div>
            <SocialLoginButton
              onClick={[Function]}
            >
              <span>
                <svg
                  height="20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.89.214C4.055 1.047 1.005 4.13.205 7.947c-.734 3.45.533 7.283 3.166 9.6.967.85 3.2 2.033 4.15 2.183l.617.1v-6.883H5.806v-3h2.283l.083-1.633c.134-2.417.717-3.534 2.3-4.25.617-.284 1.034-.35 2.3-.334.85.017 1.617.084 1.7.134.1.05.167.7.167 1.433v1.317h-.983c-1.484 0-1.75.283-1.817 1.983l-.067 1.35h1.45c1.284 0 1.434.033 1.35.283-.05.167-.133.667-.2 1.134-.216 1.55-.25 1.583-1.483 1.583h-1.083V19.914l.866-.234c1.684-.433 2.984-1.216 4.4-2.633 2.067-2.067 2.9-4.1 2.9-7.017 0-3.166-1.2-5.75-3.616-7.766C14.106.38 10.772-.42 7.889.214z"
                    fill="#1877F2"
                    fillRule="nonzero"
                  />
                </svg>
              </span>
              <FormattedMessage
                id="AuthenticationPage.loginWithFacebook"
                values={Object {}}
              />
            </SocialLoginButton>
            <center>
              <FormattedMessage
                id="AuthenticationPage.or"
                values={Object {}}
              />
            </center>
          </div>
          <LoginForm
            inProgress={false}
            onSubmit={[Function]}
          />
        </div>
      </div>
      <injectIntl(ModalComponent)
        id="AuthenticationPage.tos"
        isOpen={false}
        onClose={[Function]}
        onManageDisableScrolling={[Function]}
        usePortal={true}
      >
        <div>
          <h2>
            <FormattedMessage
              id="AuthenticationPage.termsHeading"
              values={Object {}}
            />
          </h2>
          <TermsOfService
            className={null}
            rootClassName={null}
          />
        </div>
      </injectIntl(ModalComponent)>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSingleColumn>
</Page>
`;
